--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "zod": "^3.22.4",
+    "zod-express-middleware": "^1.4.0"
   }
 }
